# clinvar-ingest

./: .copier-answers.yml  .cruft.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  Makefile~  README.md  download.yaml  justfile  mkdocs.yaml  pyproject.toml
.claude/skills/: create-koza-ingest.md  update-template.md
.github/workflows/: create-release.yaml  deploy-docs.yaml  release.yaml  test.yaml  update-docs.yaml
docs/: 404.html  edges_report.tsv  index.html  index.md  nodes_report.tsv  objects.inv  sitemap.xml
docs/search/: search_index.json
golden_output/: clinvar_variant_edges_report.tsv  clinvar_variant_nodes.tsv  clinvar_variant_nodes_report.tsv
scripts/: download.py  generate-rdf.py  generate-report.py  get-latest-report.py  mkdocs-macros.py  vcf_to_tsv.py  write_metadata.py
src/: __init__.py  clinvar_helpers.py  transform.py  transform.yaml  versions.py
src/clinvar_ingest/: __init__.py  cli.py  download.yaml  metadata.yaml  transform.py  transform.yaml
tests/: test_clinvar.py  test_example.py
