[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "clinvar_ingest"
description = "Modular ingest for ClinVar variants. Creates variant nodes and associations for phenotype, disease, gene, and pathogenicity relationships."
authors = [
  {name = "Monarch Initiative", email = "info@monarchinitiative.org"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "koza>=2.0.0",
  "biolink-model>=4.0.0",
  "cyvcf2",
  "kghub-downloader>=0.3.0",
  "kozahub-metadata-schema",
  "requests>=2.28.0",
]

[tool.uv.sources]
# Path-dep on the kozahub metadata schema. Assumes the schema repo is checked
# out as a sibling directory. Switch to `git = ...` or PyPI once published.
kozahub-metadata-schema = { path = "../kozahub-metadata-schema", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

